Completato nome sito:BoardRoom e attivazione automatica utenti

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>boardroom</title>
+    <title>Boardroom</title>
     <meta name="description" content="Description for boardroom" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
     <base href="/" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" type="image/png" href="content/images/logo-boardroom.png" />
     <link rel="manifest" href="manifest.webapp" />
     <link rel="stylesheet" href="content/css/loading.css" />
     <!-- jhipster-needle-add-resources-to-root - JHipster will add new resources here -->
